test/scc/stmt/semantic-errors/057.a
057.t:6:9: error: case label does not reduce to an integer constant